--- a/package.json
+++ b/package.json
@@ -1,26 +1,30 @@
 {
-  "name": "backend_type_module",
+  "name": "backend-postgres",
   "version": "1.0.0",
+  "description": "",
   "main": "server.js",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/yogendra09/backend-postgres.git"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/yogendra09/backend-postgres/issues"
+  },
+  "homepage": "https://github.com/yogendra09/backend-postgres#readme",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
-    "crypto-js": "^4.2.0",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "express-session": "^1.18.1",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.9.3",
-    "morgan": "^1.10.0",
-    "socket.io": "^4.8.1"
+    "jsonwebtoken": "^9.0.2"
   }
 }
